--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "main": "index.js",
   "license": "MIT",
   "author": "elisiomualumene",
-  "devDependencies": {},
-  "dependencies": {
+  "devDependencies": {
+    "ts-node": "^10.9.1",
     "@types/jest": "^29.1.1",
     "@types/node": "^18.7.23",
-    "jest": "^29.1.2",
-    "ts-jest": "^29.0.3",
-    "typescript": "*",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0"
+    "eslint-plugin-promise": "^6.0.0",
+    "jest": "^29.1.2",
+    "ts-jest": "^29.0.3",
+    "typescript": "*"
   },
+  "dependencies": {},
   "scripts": {
     "test": "jest"
   }
